[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/bar_graph.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="bar_graph" type="Node2D"]
z_index = 3
script = ExtResource( 1 )

[node name="ui" type="Node2D" parent="."]
z_index = -1

[node name="background" type="Panel" parent="ui"]
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="move" type="Button" parent="ui"]
margin_left = 110.0
margin_top = -149.0
margin_right = 130.0
margin_bottom = -129.0

[node name="exit" type="Button" parent="ui"]
margin_left = 130.0
margin_top = -149.0
margin_right = 150.0
margin_bottom = -129.0

[connection signal="button_down" from="ui/move" to="." method="_on_move_button_down"]
[connection signal="button_up" from="ui/move" to="." method="_on_move_button_up"]
[connection signal="pressed" from="ui/exit" to="." method="_on_exit_pressed"]
